2004-11-25 Alain Magloire
	Fix PR 79076
	* utils/org/eclipse/cdt/utils/elf/Elf.java

2004-11-16 Alain Magloire
	FIX for 27663
	* utils/org/eclipse/cdt/utils/pty/PTY.java
	* utils/org/eclipse/cdt/utils/spawner/ProcessFactory.java
	* utils/org/eclipse/cdt/utils/spawner/Spawner.java
	* utils/org/eclipse/cdt/utils/spawner/SpawnerInputStream.java

2004-11-14 Alain Magloire
	Fix for PR 77546.
	Make the error parser manager faster by
	using IResourceProxyVisitor to get the files.
	Use eoParser.findFileName() faster.
	* src/org/eclipse/cdt/core/ErrorParserManager.java
	* src/org/eclipse/cdt/core/internal/errorparsers/GASErrorParser.java
	* src/org/eclipse/cdt/core/internal/errorparsers/GCCErrorParser.java
	* src/org/eclipse/cdt/core/internal/errorparsers/GLDErrorarser.java

2004-11-11 Alain Magloire
	PR 78573, patch from Brad Jarvinen
	* src/org/eclipse/cdt/internal/errorparser/VCErroParser.java

2004-11-11 Alain Magloire
	PR 78570, patch from Brad Jarvinen
	The default VC error parser understands (<line number>) but doesn't understand 
	(<line number>, <column>), which is also a valid VC error output format.
	* src/org/eclipse/cdt/internal/errorparser/VCErroParser.java

2004-11-10 Alain Magloire
	Typo in method IBinaryParser.ISymbol
	* src/org/eclipse/cdt/core/IBinaryParser.java
	* utils/org/eclipse/cdt/utils/Symbol.java

2004-11-10 Alain Magloire
	Fix for PR 78308, on deleting of non-C resources, no deltas
	was fired.

	* model/org/eclipse/cdt/internal/core/model/CModelManager.java

2004-11-05 Alain Magloire
	More framework for the formatter.
	* src/org/eclipse/cdt/core/ToolFactory.java
	* src/org/eclipse/cdt/core/CCorePlugin.java
	* src/org/eclipse/cdt/core/formatter/CodeFormatter.java
	* src/org/eclipse/cdt/core/formatter/CodeFormatterConstants.java
	
2004-11-01 Alain Magloire

	Change to the errorParserManager, ... finally
	- do no reorder the arbitrary the error parsers array
	- if IErrorParser.processLine() return true bail out.
